--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -5,5 +5,6 @@
 body {
     margin: 0;
     font-family: 'Roboto', sans-serif;
+    background-color: #000;
     background-image: url(../assets/background.png);
 }
