--- a/frontend/src/styles/pages/Home.css
+++ b/frontend/src/styles/pages/Home.css
@@ -1,18 +1,20 @@
-
-
 .home-page-container {
     display: flex;
     flex-direction: column;
     width: 100%;
     align-items: center;
+    justify-content: space-evenly;
+    height: 100vh;
+}
+
+.logo {
+    height: 40vh;
 }
 
 .header {
     display: flex;
-    align-items: flex;
-    justify-content: space-between;
-    padding: 21px 55px 0px 34px ;
-    gap: 83px;
+    align-items: center;
+    justify-content: space-evenly;
     align-self: stretch;
 }
 
@@ -24,25 +26,26 @@
     gap: 18px;
 }
 
-.start {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 115px;
+.announcement {
+    background-color: #fff;
+    color: #000;
+    font-weight: bold;
+    padding: 10px;
+    border-radius: 10px;
 }
 
+.start {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    align-self: stretch;
+}
 
-.home-page-container button{
+.home-page-container button {
     background: none;
     border: none;
     cursor: pointer;
-    transition: transform 0.5s;
 }
-
-.home-page-container button:hover{
-    transform: scale(1.1);
-}
-
 
 .select-character {
     transition: transform 0.5s;
@@ -58,4 +61,12 @@
 
 .info:hover {
     transform: scale(1.1);
+}
+
+.personaje-seleccionado {
+    height: 25vh;
+}
+
+.boton-iniciar {
+    height: 15vh;
 }
